# smartedit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
comptest/analyse-smartedit/: TASK.md
comptest/analyse-smartedit/codex-54/: analysis-nosmartedit.md  analysis-smartedit.md  session-nosmartedit.jsonl  session-smartedit.jsonl
docs/: ast-print.md  text-format.md
lib/: CHANGELOG.md  Cargo.toml
lib/src/: executor.rs  file_ast.rs  lib.rs  parser.rs
lib/src/edit/: mod.rs  operations.rs  target.rs
skill/: SKILL.md
src/: cli_support.rs  error.rs  executor.rs  file_ast.rs  fs.rs  main.rs  plan.rs  span.rs
src/cmd/: apply.rs  ast_print.rs  install_skill.rs  mod.rs
src/edit/: path.rs  program.rs  range.rs
