[package]
name = "smartedit"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
chumsky = "0.12.0"
globset = "0.4.18"
regex = "1.12.3"
tree-sitter = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
